# cmake-findopencl

./: CMakeLists.txt  README.md
cmake/: FindOpenCL.cmake
